--- a/index.css
+++ b/index.css
@@ -33,7 +33,7 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-around;
-    background-color: #cfbdbd;
+    background-color: #7e557e;
     position: sticky;
     top: 0;
     z-index: 2;
