--- a/index.css
+++ b/index.css
@@ -560,9 +560,9 @@ footer{
     }
     nav ul li{
         display: block;
-        padding: 20px;
-        text-align: center;
-        margin: 40px 0;
+        padding: 10px;
+        margin: 15px 0;
+        font-size: smaller; 
     }
     .hero-section{
         flex-direction: column-reverse;
